# type-list

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/workflows/: ci.yml  labels.yml  pages.yml  stale.yml
cmake/: CppModules.cmake
docs/: IMPLEMENTATION.md  conf.py  index.md  requirements.txt
docs/_build/html/: .buildinfo  API.html  ARCHITECTURE.html  IMPLEMENTATION.html  STRUCTURE.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: API.doctree  ARCHITECTURE.doctree  IMPLEMENTATION.doctree  STRUCTURE.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: API.md.txt  ARCHITECTURE.md.txt  STRUCTURE.md.txt
examples/: access.cpp  back_example.cpp  combine.cpp  concat_example.cpp  core.cpp  empty_example.cpp  filter_example.cpp  flatten_example.cpp  from_pack_example.cpp  front_example.cpp  map_example.cpp  pop_front_example.cpp  push_back_example.cpp  push_front_example.cpp  reverse_example.cpp  size_example.cpp  transform.cpp  types_example.cpp  unzip_example.cpp  zip_example.cpp  zip_with_example.cpp
scripts/: build-docs.sh  check-no-includes.sh  ci.sh  format-check.sh  format.sh  gen_compile_commands.sh  install-llvm-linux-ci.sh  normalize-cpp-blank-lines.py
src/: type_list.cppm
src/access/: access.cppm  back.cppm  front.cppm  pop_back.cppm  pop_front.cppm  push_back.cppm  push_front.cppm
src/combine/: combine.cppm  flatten.cppm  reverse.cppm  unzip.cppm  zip.cppm  zip_with.cppm
src/core/: core.cppm  empty.cppm  non_empty.cppm  size.cppm  type_list.cppm  types.cppm
src/transform/: filter.cppm  fold_left.cppm  fold_right.cppm  map.cppm  transform.cppm
tests/: concat_test.cpp  filter_test.cpp  flatten_test.cpp  fold_left_test.cpp  fold_right_test.cpp  from_pack_test.cpp  insert_test.cpp  map_test.cpp  pop_back_test.cpp  push_back_test.cpp  push_front_test.cpp  reverse_test.cpp  type_list_test.cpp  unzip_test.cpp  zip_test.cpp  zip_with_test.cpp
tests/access/: back_test.cpp  front_test.cpp  pop_back_test.cpp  pop_front_test.cpp  push_back_test.cpp  push_front_test.cpp
tests/combine/: flatten_test.cpp  reverse_test.cpp  unzip_test.cpp  zip_test.cpp  zip_with_test.cpp
tests/core/: empty_test.cpp  size_test.cpp  smoke_test.cpp  type_list_test.cpp  types_test.cpp
tests/transform/: filter_test.cpp  fold_left_test.cpp  fold_right_test.cpp  map_test.cpp
